@@ -1,1 +1,13 @@
 # ATMExample
+
+
+## Assumptions made
+
+## Based on User Specified amount
+
+1. Amount of withdrawal will be in dollar currency.
+2. Assuming customer has account setup with the bank and as this is atm transaction, we are using card number and pin to validate account.
+3. default amount balance is set to 1000$ so that they can withdraw amount to show case in this example.
+4. build project - mvn clean install.
+5. Code is written in java 17 version and IDE, To run junit test case in vm options add this " --add-opens java.base/java.lang=ALL-UNNAMED"
+6. Thank you for giving this assignment.
